Terminada activación y desactivación de roles

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -296,4 +296,9 @@ box-formulario-empleados {
   border: none;
 }
 
+#button_activar,
+#button_desactivar {
+  display: none;
+}
+
 /*# sourceMappingURL=styles.css.map */
