--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,8 +34,11 @@ h6 {
   border: 2px solid #004d40;
 }
 
-.title-page > h1 {
+.title-page .container h1 {
   margin: 0 1em;
+}
+.title-page .container h1,
+.title-page .container p {
   line-height: 2em;
 }
 
