Terminada maquetación Edición de empleados

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -230,6 +230,8 @@ box-formulario-empleados {
 .empleados-col-1 label {
     padding-left: 0;
     padding-right: 0;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
 }
 
 .box-formulario-registros {
