--- a/public/scss/_generales.scss
+++ b/public/scss/_generales.scss
@@ -16,7 +16,13 @@ h6 {
 
 .active {
     font-weight: bold;
+    color: $secondarycolor;
 }
+
+.active:hover {
+    color: $secondarycolor;
+}
+
 
 .deshabilitado {
     opacity: .6;
@@ -28,4 +34,30 @@ h6 {
 
 .textoSecondaryColor {
     color: $secondarycolor;
+}
+
+.mainBackground {
+    background-image: url(../images/background02.jpg);
+    background-position: bottom right;
+    background-repeat: no-repeat;
+    position: absolute;
+    bottom: 35px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    z-index: -999999999;
+}
+
+.mainBackground2 {
+    background-image: url(../images/background03.jpg);
+    background-position: bottom right;
+    background-repeat: no-repeat;
+    position: absolute;
+    bottom: 35px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    z-index: -999999999;
 }
