Rediseño de Administración de empleados, ajustes en cabecera, principal y usuarios

--- a/public/scss/_menu.scss
+++ b/public/scss/_menu.scss
@@ -16,6 +16,8 @@ ul>li>ul>li:last-child {
 
 .menu-box {
     margin-left: 2em;
+    position: fixed;
+    width: 280px !important;
 }
 
 .title-menu {
