--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,13 +50,17 @@ h6 {
   background-image: url(../images/background03.jpg);
   background-position: bottom right;
   background-repeat: no-repeat;
-  position: absolute;
+  position: fixed;
   bottom: 35px;
   right: 0px;
   width: 100%;
-  height: 100%;
+  height: 80% !important;
   opacity: 0.7;
   z-index: -999999999;
+}
+
+.ml-n2 {
+  margin-left: -4rem !important;
 }
 
 .title-page-login {
@@ -123,6 +127,8 @@ ul > li > ul > li:last-child {
 /* MENU PRINCIPAL */
 .menu-box {
   margin-left: 2em;
+  position: fixed;
+  width: 280px !important;
 }
 
 .title-menu {
@@ -260,6 +266,14 @@ box-formulario-empleados {
 .main-box {
   padding: 0;
   min-height: 100vh;
+}
+
+.main-content {
+  margin-top: 95px;
+}
+
+.positionFixed {
+  position: fixed;
 }
 
 .form-inputs {
