--- a/public/scss/_generales.scss
+++ b/public/scss/_generales.scss
@@ -53,11 +53,15 @@ h6 {
     background-image: url(../images/background03.jpg);
     background-position: bottom right;
     background-repeat: no-repeat;
-    position: absolute;
+    position: fixed;
     bottom: 35px;
     right: 0px;
     width: 100%;
-    height: 100%;
+    height: 80% !important;
     opacity: 0.7;
     z-index: -999999999;
+}
+
+.ml-n2 {
+    margin-left: -4rem !important;
 }
