--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,6 +12,11 @@ h6 {
   font-size: 1.1em;
 }
 
+.posicionador {
+  height: 95px;
+  width: 100%;
+}
+
 .active {
   font-weight: bold;
   color: #004d40;
@@ -61,6 +66,10 @@ h6 {
 
 .ml-n2 {
   margin-left: -4rem !important;
+}
+
+.display-4 {
+  font-size: 2.5rem !important;
 }
 
 .title-page-login {
@@ -266,10 +275,6 @@ box-formulario-empleados {
 .main-box {
   padding: 0;
   min-height: 100vh;
-}
-
-.main-content {
-  margin-top: 95px;
 }
 
 .positionFixed {
