--- a/public/scss/_generales.scss
+++ b/public/scss/_generales.scss
@@ -14,6 +14,11 @@ h6 {
     font-size: 1.1em;
 }
 
+.posicionador {
+    height: 95px;
+    width: 100%;
+}
+
 .active {
     font-weight: bold;
     color: $secondarycolor;
@@ -64,4 +69,8 @@ h6 {
 
 .ml-n2 {
     margin-left: -4rem !important;
+}
+
+.display-4 {
+    font-size: 2.5rem !important;
 }
