--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -4,6 +4,7 @@
 @import './login-page';
 @import './menu';
 @import './forms';
+@import './reportes';
 @import './footer';
 
 
@@ -56,54 +57,7 @@
 
 
 
-// Reportes
-.box-reporte-md {
-    width: 600px;
-}
 
-.box-reporte-xs {
-    width: 350px;
-}
-
-.box-reporte {
-    overflow-x: hidden;
-}
-
-.tabla-md {
-    width: 100%;
-}
-
-.tabla-md tr {
-    height: 2.3em !important;
-}
-
-.tabla-md th,
-.tabla-md td {
-    text-align: center;
-    line-height: 2em;
-    border: 1px solid $secondarycolor;
-    padding: .2rem 0.9rem !important;
-}
-
-.tabla-md th {
-    font-size: 0.8rem;
-}
-
-.tabla-md td {
-    width: 100%;
-    font-size: 0.7rem;
-    white-space: nowrap;
-}
-
-.tabla-md th {
-    background-color: $maincolor;
-}
-
-#tabla-empleados th,
-#tabla-incidentes th {
-    font-size: .8em;
-    min-width: 150px;
-}
 
 .searchbox {
     input {
