Ajuste inferior creación y edición de empleados

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,6 +17,11 @@ h6 {
   width: 100%;
 }
 
+.posicionador-bottom {
+  height: 50px;
+  width: 100%;
+}
+
 .active {
   font-weight: bold;
   color: #004d40;
