--- a/public/scss/_generales.scss
+++ b/public/scss/_generales.scss
@@ -19,6 +19,11 @@ h6 {
     width: 100%;
 }
 
+.posicionador-bottom {
+    height: 50px;
+    width: 100%;
+}
+
 .active {
     font-weight: bold;
     color: $secondarycolor;
