--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -112,6 +112,14 @@ h6 {
   font-size: 0.7rem;
 }
 
+.logo-loginpage {
+  position: absolute;
+  padding: 0.7rem;
+}
+.logo-loginpage img {
+  width: 300px;
+}
+
 .login-box {
   border: 2px solid #004d40;
   width: 40%;
