Terminada la vista de Administración de Registros
Todavía no se ha programado la funcionalidad

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -81,6 +81,10 @@ h6 {
   position: fixed;
 }
 
+.oculto {
+  display: none !important;
+}
+
 .title-page-login {
   border-bottom: 3px double #42b983;
   padding: 0.7rem;
