Ajuste en reportes de ARL

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -412,6 +412,10 @@ th {
   min-width: 150px;
 }
 
+table.dataTable .columnaId {
+  width: 20px !important;
+}
+
 /**************************** FOOTER *******************************/
 .Footer {
   width: 100%;
