--- a/public/scss/_reportes.scss
+++ b/public/scss/_reportes.scss
@@ -61,3 +61,9 @@ th {
     font-size: .8em;
     min-width: 150px;
 }
+
+table.dataTable {
+    .columnaId {
+        width: 20px !important;
+    }
+}
