--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -420,6 +420,13 @@ table.dataTable .columnaId {
   width: 20px !important;
 }
 
+#tbllistado .selected {
+  background-color: #42b983 !important;
+}
+#tbllistado .focus {
+  box-shadow: inset 0 0 1px 2px #004d40;
+}
+
 /**************************** FOOTER *******************************/
 .Footer {
   width: 100%;
