--- a/public/scss/_reportes.scss
+++ b/public/scss/_reportes.scss
@@ -67,3 +67,13 @@ table.dataTable {
         width: 20px !important;
     }
 }
+
+#tbllistado {
+    .selected {
+        background-color: $maincolor !important;
+    }
+
+    .focus {
+        box-shadow: inset 0 0 1px 2px $secondarycolor;
+    }
+}
