--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -427,6 +427,16 @@ table.dataTable .columnaId {
   box-shadow: inset 0 0 1px 2px #004d40;
 }
 
+.dt-button span {
+  font-size: 0.7rem !important;
+  font-weight: normal;
+}
+.dt-button i {
+  font-size: 1.2rem !important;
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
+}
+
 /**************************** FOOTER *******************************/
 .Footer {
   width: 100%;
