--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -426,6 +426,19 @@ table.dataTable .columnaId {
 #tbllistado .focus {
   box-shadow: inset 0 0 1px 2px #004d40;
 }
+#tbllistado .registroActivado,
+#tbllistado .registroDesactivado {
+  color: white;
+  font-size: 0.9rem !important;
+  padding-left: 0.3rem;
+  padding-right: 0.3rem;
+}
+#tbllistado .registroActivado {
+  background-color: #42b983 !important;
+}
+#tbllistado .registroDesactivado {
+  background-color: red !important;
+}
 
 .dt-button span {
   font-size: 0.7rem !important;
