--- a/public/scss/_reportes.scss
+++ b/public/scss/_reportes.scss
@@ -76,6 +76,22 @@ table.dataTable {
     .focus {
         box-shadow: inset 0 0 1px 2px $secondarycolor;
     }
+
+    .registroActivado,
+    .registroDesactivado {
+        color: white;
+        font-size: 0.9rem !important;
+        padding-left: 0.3rem;
+        padding-right: 0.3rem;
+    }
+
+    .registroActivado {
+        background-color: $maincolor !important;
+    }
+
+    .registroDesactivado {
+        background-color: red !important;
+    }
 }
 
 .dt-button {
