--- a/public/scss/_login-page.scss
+++ b/public/scss/_login-page.scss
@@ -11,17 +11,62 @@
 
 .login-box {
     border: 2px solid $secondarycolor;
-    width: 40%;
+    width: 500px;
     margin: auto;
-    margin-top: 10%;
+    margin-top: 180px;
+
+    .title-login {
+        background-color: $maincolor;
+        border-bottom: 2px solid $secondarycolor;
+    }
+
+    .title-login>h2 {
+        margin: 0 1em;
+        line-height: 2em;
+    }
 }
 
-.title-login {
-    background-color: $maincolor;
-    border-bottom: 2px solid $secondarycolor;
+@media (max-width: 575px) {
+    .login-box {
+        width: 320px !important;
+    }
 }
 
-.title-login>h2 {
-    margin: 0 1em;
-    line-height: 2em;
+
+@media (max-width: 767px) {
+    .logo-loginpage {
+        left: 0px;
+
+        img {
+            width: 200px;
+        }
+    }
+
+    .login-box {
+        margin-top: 150px;
+        width: 400px;
+
+        .form-inputs {
+            width: 85% !important;
+        }
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .logo-loginpage {
+        img {
+            width: 250px;
+        }
+    }
+
+    .login-box {
+        margin-top: 180px;
+        width: 450px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .login-box {
+        margin-top: 120px;
+    }
 }
