--- a/public/scss/_menu.scss
+++ b/public/scss/_menu.scss
@@ -69,3 +69,33 @@ ul {
     padding-left: 2.2em;
     padding-right: 2.2em;
 }
+
+@media (max-width: 575px) {
+    .menu-box {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+
+        nav {
+            margin-left: auto;
+            margin-right: auto;
+
+            ul {
+                padding-left: 1.5rem;
+
+                a {
+                    font-weight: bold;
+                }
+            }
+        }
+
+        .salir-menu {
+            margin-left: auto;
+            margin-right: auto;
+
+            span {
+                display: none !important;
+            }
+        }
+    }
+}
