Diseñada versión mobile en menus de módulos

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -93,6 +93,10 @@ h6 {
     display: none !important;
   }
 
+  .titleBig {
+    display: none;
+  }
+
   .mainBackground2 {
     opacity: 0.2 !important;
   }
@@ -106,6 +110,11 @@ h6 {
     right: 30px;
   }
 
+  .titleBig h1 {
+    font-size: 2rem !important;
+    left: 350px;
+  }
+
   .mainBackground {
     height: auto;
     width: 90%;
@@ -115,6 +124,12 @@ h6 {
   .logo-principal img {
     width: 350px !important;
     left: 360px;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .titleBig h1 {
+    font-size: 3rem !important;
+    left: 350px;
   }
 }
 .title-page-login {
