--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -146,3 +146,40 @@ box-formulario-empleados {
 #button_desactivar {
     display: none;
 }
+
+@media (max-width:575px) {
+    .box-formulario {
+        max-width: 320px !important;
+
+        .cancelar {
+            text-align: right;
+
+            button {
+                text-align: center;
+            }
+        }
+    }
+
+    .boton-mobile-regresar {
+        max-width: 320px;
+        margin-left: 0;
+        margin-right: 0;
+
+        button {
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+}
+
+@media (max-width:767px) {
+    .menu-box-modulos {
+        display: none;
+    }
+}
+
+@media (min-width:768px) {
+    .boton-mobile-regresar {
+        display: none;
+    }
+}
