--- a/public/scss/_generales.scss
+++ b/public/scss/_generales.scss
@@ -72,10 +72,6 @@ h6 {
     z-index: -999999999;
 }
 
-.ml-n2 {
-    margin-left: -4rem !important;
-}
-
 .display-4 {
     font-size: 2.5rem !important;
 }
@@ -135,6 +131,12 @@ h6 {
             width: 350px !important;
             left: 360px;
         }
+    }
+}
+
+@media (min-width:768px) {
+    .ml-n2 {
+        margin-left: -4rem !important;
     }
 }
 
