--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -1,6 +1,11 @@
 // Formularios
 .box-formulario {
     width: 450px;
+
+    input,
+    textarea {
+        border: 1px solid $maincolor;
+    }
 }
 
 .title-formularios {
@@ -8,23 +13,19 @@
     color: $secondarycolor;
 }
 
-box-formulario-empleados {
-    width: 100%;
-}
-
 .box-formulario-empleados .col-6 {
-    padding-left: .1em;
+    padding-left: 0.1em;
 }
 
 .box-formulario-empleados label {
-    font-size: .8em;
+    font-size: 0.8em;
     margin-top: 0;
     margin-bottom: 0;
 }
 
 .box-formulario-empleados .form-group {
-    margin-top: .5em !important;
-    margin-bottom: .5em !important;
+    margin-top: 0.5em !important;
+    margin-bottom: 0.5em !important;
 }
 
 .box-formulario-empleados input,
@@ -38,25 +39,13 @@ box-formulario-empleados {
     text-align: center;
 }
 
-.bootstrap-select {
-    .filter-option-inner-inner {
-        font-size: 0.8em !important;
-    }
+#buscarId {
+    opacity: 1;
 }
 
-.dropdown-menu {
-    .bs-searchbox {
-        input {
-            font-size: 0.8em !important;
-        }
-    }
-
-    .text {
-        font-size: 0.8em !important;
-    }
-
+.formularioEditActDesact {
+    display: none;
 }
-
 
 .empleados-col-1 label {
     padding-left: 0;
@@ -70,8 +59,8 @@ box-formulario-empleados {
 }
 
 .generadores {
-    font-size: .8em;
-    margin-bottom: .4em;
+    font-size: 0.8em;
+    margin-bottom: 0.4em;
     width: 120px;
 }
 
@@ -85,7 +74,7 @@ box-formulario-empleados {
 }
 
 .form-inputs>input {
-    margin: .5em auto;
+    margin: 0.5em auto;
 }
 
 .form-inputs>.btn {
@@ -95,7 +84,7 @@ box-formulario-empleados {
 .btn-primary {
     background-color: $maincolor !important;
     border: none;
-    opacity: .8;
+    opacity: 0.8;
 }
 
 .btn-light {
@@ -112,10 +101,67 @@ box-formulario-empleados {
     border-color: $maincolor;
 }
 
+.bootstrap-select {
+    .filter-option-inner-inner {
+        font-size: 0.8em !important;
+        color: black;
+        padding-left: 0.5rem;
+        border: none;
+        border-radius: 0.2rem;
+        opacity: 1 !important;
+    }
+}
+
+.dropdown-menu {
+    border: 1px solid $secondarycolor;
+
+    .bs-searchbox {
+        input {
+            font-size: 0.8em !important;
+            border: 1px solid $secondarycolor !important;
+            box-shadow: 1px 1px 3px $maincolor;
+        }
+    }
+
+    .text {
+        font-size: 0.8em !important;
+    }
+}
+
 .searchbox {
+    .dropdown-toggle {
+        border-radius: 0.3rem 0 0 0.3rem !important;
+
+        &:hover {
+            background-color: rgba($color: $maincolor, $alpha: 0.3);
+        }
+
+        .filter-option {
+            border: none;
+
+            &:active,
+            &:focus {
+                border: none !important;
+            }
+
+            .filter-option-inner {
+                border: none !important;
+
+                &:active,
+                &:focus {
+                    border: none !important;
+                }
+            }
+        }
+    }
+
+    #buscarId {
+        position: relative;
+        left: 0;
+    }
 
     input {
-        width: 85%;
+        width: 73%;
         float: left;
     }
 
@@ -125,19 +171,33 @@ box-formulario-empleados {
     }
 
     button {
-        width: 12%;
+        width: 27%;
         float: right;
         line-height: 2rem;
-        border: none;
-        font-size: 1.2rem;
-        color: $borderColor;
-        background-color: transparent;
-        padding: .2rem;
+        font-size: 0.9rem;
+        padding: 0.2rem;
         cursor: pointer;
 
         &:focus,
         &:active {
             border: none;
+        }
+    }
+
+    .btnBusqueda {
+        background-color: rgba($color: $maincolor, $alpha: 0.7);
+        color: $secondarycolor;
+        border-radius: 0 0.3rem 0.3rem 0;
+        border: 1px solid rgba($color: $maincolor, $alpha: 0.7);
+        transition: all 0.3s ease;
+
+        i {
+            margin-right: 0.2rem;
+            font-size: 1rem;
+        }
+
+        &:hover {
+            background-color: rgba($color: $maincolor, $alpha: 1);
         }
     }
 }
@@ -152,7 +212,7 @@ box-formulario-empleados {
     padding-left: 1.5rem;
 }
 
-@media (max-width:575px) {
+@media (max-width: 575px) {
     .box-formulario {
         max-width: 320px !important;
 
@@ -177,7 +237,7 @@ box-formulario-empleados {
     }
 }
 
-@media (max-width:767px) {
+@media (max-width: 767px) {
     .menu-box-modulos {
         display: none;
     }
@@ -208,7 +268,7 @@ box-formulario-empleados {
     }
 }
 
-@media (min-width:768px) {
+@media (min-width: 768px) {
     .boton-mobile-regresar {
         display: none;
     }
