Desarrollo del filtrado de ciudades en proceso
Se deja inactivo por problemas en la función filtrar() del archivo gestion_empleados.js

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -441,6 +441,7 @@ ul {
 
 .dropdown-menu {
   border: 1px solid #004d40;
+  max-height: 100px !important;
 }
 .dropdown-menu .bs-searchbox input {
   font-size: 0.8em !important;
