--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -114,6 +114,7 @@
 
 .dropdown-menu {
     border: 1px solid $secondarycolor;
+    max-height: 100px !important;
 
     .bs-searchbox {
         input {
