Terminada generación de informes de registro de incidentes

--- a/public/scss/_reportes.scss
+++ b/public/scss/_reportes.scss
@@ -9,6 +9,10 @@ td {
     border: none !important;
 }
 
+.fa-file-pdf-o {
+    color: red !important;
+}
+
 .box-reporte-md {
     width: 100% !important;
 }
