--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -101,6 +101,11 @@
     border-color: $maincolor;
 }
 
+.mensaje_tipo_archivos {
+    font-style: italic;
+    font-size: .7rem;
+}
+
 .bootstrap-select {
     .filter-option-inner-inner {
         font-size: 0.8em !important;
